--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -22,6 +22,9 @@
 
       <script type="text/javascript"
               src="webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+      <!--check this-->
+      <script type="text/javascript"
+              src="webjars/jquery/3.3.1/js/jquery.min.js"></script>
 
       Copyright © 2018 cherkasov
     </footer>
